Add unit test